# hap-llm-api-proxy

./: .gitignore  README.md  REQUIREMENTS.md  config.example.json  llm-api-proxy.service  pyproject.toml
app/: __main__.py  auth_token.py  config.py  main.py  proxy.py  reasoning.py
tests/: conftest.py  test_auth_token.py  test_config.py  test_reasoning.py
